Fix image and text gap in menu

--- a/src/styles.css
+++ b/src/styles.css
@@ -104,6 +104,7 @@ header button:hover{
     border: 1px solid white;
     border-radius: 0.5rem;
     display: flex;
+    gap: 2rem;
     align-items: center;
 }
 
